# CRUDRepository

./: .gitignore  LICENSE  MANIFEST.in  PYPI.md  README.md  deploy.sh  docker-compose.yml  example.env  init-env.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/adminer/: Dockerfile
.devcontainer/certs/: server.crt  server.key
.devcontainer/mariadb/: Dockerfile  entrypoint.sh  init.sql  my.cnf
.devcontainer/mysql/: Dockerfile  init.sql  my.cnf  mysqld.yaml
.devcontainer/nginx-proxy/: Dockerfile  nginx.conf
.devcontainer/postgres/: Dockerfile  create.sql  db.sql  postgres.sql  postgresql.conf
.github/workflows/: deploy.yml  pylint.yml  python-package.yml
crud_repository/: __config__.py
crud_repository/db/: factory.py  idatabase.py
crud_repository/db/mariadb/: db.py
crud_repository/db/mysql/: db.py
crud_repository/db/postgres/: db.py
crud_repository/model/: base.py
crud_repository/my_logger/: formatters.py  handlers.py  logger.py  monitor.py
crud_repository/repo/: repository.py
src/: __config__.py  main.py
src/db/: database.py  database_interface.py  factory.py  idatabase.py
src/db/mariadb/: db.py
src/db/mysql/: db.py
src/db/postgres/: db.py
src/myLogger/: Formatters.py  Handlers.py  Logger.py  Monitor.py
src/my_logger/: formatters.py  handlers.py  logger.py  monitor.py
src/repo/: repository.py
src/utils/: crypto.py
tests/: models.py  repository.py  test_maria.py  test_mysql.py  test_postgres.py  user.py
tests/integration/: test_maria.py  test_mysql.py  test_postgres.py
