[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crud_repository"
version = "0.1.7"
description = "The CRUDRepository is a Python project designed to provide a generic implementation of Create, Read, Update, and Delete (CRUD) operations for various databases."
authors = [
  {name = "Dellius Alexander", email = "dalexander@hyfisolutions.com"},
  {email = "info@hyfisolutions.com"},
]
maintainers = [
  {name = "Dellius Alexander", email = "dalexander@hyfisolutions.com"}
]
readme = {file = "PYPI.md", content-type = "text/markdown"}
keywords = ["crud-repository", "database", "model", "abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE", content-type = "text/plain"}

# Update the 'include' directive to include the "crud_repository" directory

dependencies = [
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "colorlog>=6.4.1",
    "cryptography>=42.0.5",
    "pymysql>=1.1.0",
    "SQLAlchemy-Utils>=0.41.2"
]

[project.urls]
Homepage = "https://github.com/dellius-alexander/CRUDRepository.git"

