[metadata]
# Metadata is now loaded from pyproject.toml

[options]
packages = find:
    where=src
include_package_data = True
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    src.resources
    src.logs
    src.utils

[options.extras_require]
dev =
    sqlalchemy==2.0.29
    psycopg2-binary==2.9.9
    python-dotenv==1.0.1
    colorlog==6.4.1
    cryptography==42.0.5
    pymysql==1.1.0
    SQLAlchemy-Utils==0.41.2