[metadata]
# Metadata is now loaded from pyproject.toml

[sdist]
formats = zip

[options]
packages = find:
    where=src
package_dir=src
include_package_data = True
;python_requires = >=3.8,<4.0
zip_safe = False

[options.packages.find]
where=src
exclude =
    build*
	dist*
	docs*
    src.resources
    src.logs
    src.utils
